--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "formik": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.4",
     "react-redux": "^7.2.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.32.8"
   },
   "scripts": {
