--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.14.0",
     "yup": "^0.32.8"
   },
   "scripts": {
