--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dropzone": "^11.2.4",
     "react-fade-in": "^2.0.1",
     "react-redux": "^7.2.2",
+    "react-responsive-masonry": "^2.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
