--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "mercadopago": "^1.5.3",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.3.0",
