--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "axios": "^0.21.1",
     "firebase": "^8.2.4",
     "formik": "^2.2.6",
+    "jwt-decode": "^3.1.2",
     "material-ui-dropzone": "^3.5.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.4",
     "react-fade-in": "^2.0.1",
+    "react-image-magnify": "^2.7.4",
     "react-redux": "^7.2.2",
     "react-responsive-masonry": "^2.1.1",
     "react-router-dom": "^5.2.0",
