--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "mercadopago": "^1.5.3",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-http-bearer": "^1.0.1",
