--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dropzone": "^11.2.4",
     "react-fade-in": "^2.0.1",
     "react-image-magnify": "^2.7.4",
+    "react-material-ui-carousel": "^2.1.2",
     "react-redux": "^7.2.2",
     "react-responsive-masonry": "^2.1.1",
     "react-router-dom": "^5.2.0",
